crates/sith_python_parser/tests/snapshots/invalid_syntax@del_incomplete_target.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/del_incomplete_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            Delete(
                DeleteStmt {
                    range: 0..9,
                    targets: [
                        Name(
                            NameExpr {
                                range: 4..5,
                                id: Name("x"),
                                ctx: Del,
                            },
                        ),
                        Attribute(
                            AttributeExpr {
                                range: 7..9,
                                value: Name(
                                    NameExpr {
                                        range: 7..8,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                attr: Identifier {
                                    id: Name(""),
                                    range: 9..9,
                                },
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
            Expr(
                ExprStmt {
                    range: 10..11,
                    value: Name(
                        NameExpr {
                            range: 10..11,
                            id: Name("z"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Delete(
                DeleteStmt {
                    range: 12..24,
                    targets: [
                        Name(
                            NameExpr {
                                range: 16..17,
                                id: Name("x"),
                                ctx: Del,
                            },
                        ),
                        Subscript(
                            SubscriptExpr {
                                range: 19..23,
                                value: Name(
                                    NameExpr {
                                        range: 19..20,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Slice(
                                    SliceExpr {
                                        range: 22..23,
                                        lower: Some(
                                            Name(
                                                NameExpr {
                                                    range: 22..23,
                                                    id: Name("z"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        upper: Some(
                                            Name(
                                                NameExpr {
                                                    range: 23..23,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                        ),
                                        step: None,
                                    },
                                ),
                                ctx: Del,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | del x, y.
  |          ^ Syntax Error: Expected an identifier
2 | z
3 | del x, y[
4 | z
  |


  |
3 | del x, y[
4 | z
  |
